--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "main": "WATCHPACK_POLLING=true index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/brucelee1529/nodejs_blog#readme",
   "dependencies": {
     "express": "^4.21.2",
+    "express-handlebars": "^8.0.1",
     "nodemon": "^3.1.9"
   }
 }
