--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
-    "node-sass": "^9.0.0",
+    "mongoose": "^8.12.1",
     "nodemon": "^3.1.9",
     "sass": "^1.85.1"
   }
